fix certification chevron navbar rendering issue

--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                 <li><a href="classes.html" class="navbar-link" data-i18n="common:nav.classes">Classes</a></li>
                 <li><a href="events.html" class="navbar-link" data-i18n="common:nav.events">Events</a></li>
                 <li class="has-dropdown">
-                    <button class="navbar-link dropdown-trigger" aria-haspopup="true" aria-expanded="false" data-i18n="common:nav.certifications">Certifications <i data-lucide="chevron-down" class="dropdown-icon"></i></button>
+                    <button class="navbar-link dropdown-trigger" aria-haspopup="true" aria-expanded="false"><span data-i18n="common:nav.certifications">Certifications</span> <i data-lucide="chevron-down" class="dropdown-icon"></i></button>
                     <div class="nav-dropdown" role="menu">
                         <a href="/certifications/aerial-yoga-100.html" class="nav-dropdown-item" role="menuitem" data-i18n="common:nav.certificationsDropdown.aerial100">100-Hour Aerial Yoga Teacher Training</a>
                     </div>
