--- a/es/events.html
+++ b/es/events.html
@@ -111,7 +111,7 @@
                 <li><a href="/es/classes.html" class="navbar-link">Clases</a></li>
                 <li><a href="/es/events.html" class="navbar-link active">Eventos</a></li>
                 <li class="has-dropdown">
-                    <button class="navbar-link dropdown-trigger" aria-haspopup="true" aria-expanded="false">Certificaciones</button>
+                    <button class="navbar-link dropdown-trigger" aria-haspopup="true" aria-expanded="false"><span>Certificaciones</span> <i data-lucide="chevron-down" class="dropdown-icon"></i></button>
                     <div class="nav-dropdown" role="menu">
                         <a href="/es/certifications/aerial-yoga-100.html" class="nav-dropdown-item" role="menuitem">Formación de Profesores de Yoga Aéreo - 100 Horas</a>
                     </div>
