update certifications page module list with most recent programme content

--- a/certifications/aerial-yoga-100.html
+++ b/certifications/aerial-yoga-100.html
@@ -269,10 +269,10 @@
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li data-i18n="certifications:curriculum.modules.module1.topics.0">History and evolution of the practice</li>
-                                <li data-i18n="certifications:curriculum.modules.module1.topics.1">Physical, mental and emotional benefits</li>
-                                <li data-i18n="certifications:curriculum.modules.module1.topics.2">Counterindications and precautions</li>
-                                <li data-i18n="certifications:curriculum.modules.module1.topics.3">Tying the silk hammock</li>
+                                <li data-i18n="certifications:curriculum.modules.module1.topics.0">History and evolution of aerial yoga</li>
+                                <li data-i18n="certifications:curriculum.modules.module1.topics.1">Physical, mental, and emotional benefits</li>
+                                <li data-i18n="certifications:curriculum.modules.module1.topics.2">Contraindications and precautions</li>
+                                <li data-i18n="certifications:curriculum.modules.module1.topics.3">Hammock setup (types of hammocks)</li>
                             </ul>
                         </div>
                     </div>
@@ -281,15 +281,16 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">02</span>
-                            <span class="module-title" data-i18n="certifications:curriculum.modules.module2.title">Yogic Philosophy</span>
+                            <span class="module-title" data-i18n="certifications:curriculum.modules.module2.title">Aerial Yoga Practice Fundamentals</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li data-i18n="certifications:curriculum.modules.module2.topics.0">The spiritual meaning of the practice</li>
-                                <li data-i18n="certifications:curriculum.modules.module2.topics.1">Chakras, nadis & the human energy system</li>
-                                <li data-i18n="certifications:curriculum.modules.module2.topics.2">Bandhas, koshas, yamas & niyamas</li>
-                                <li data-i18n="certifications:curriculum.modules.module2.topics.3">Patanjali yoga sutras</li>
+                                <li data-i18n="certifications:curriculum.modules.module2.topics.0">Basic aerial yoga postures (manual)</li>
+                                <li data-i18n="certifications:curriculum.modules.module2.topics.1">Hammock familiarization: Joint grips, fabric height (low-medium-high), posture adjustments and variations, open and closed fabric</li>
+                                <li data-i18n="certifications:curriculum.modules.module2.topics.2">Using the hammock for spinal decompression</li>
+                                <li data-i18n="certifications:curriculum.modules.module2.topics.3">Specific therapeutic applications for each posture</li>
+                                <li data-i18n="certifications:curriculum.modules.module2.topics.4">Fabric entries and exits</li>
                             </ul>
                         </div>
                     </div>
@@ -298,14 +299,15 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">03</span>
-                            <span class="module-title" data-i18n="certifications:curriculum.modules.module3.title">Yogic Anatomy</span>
+                            <span class="module-title" data-i18n="certifications:curriculum.modules.module3.title">Yoga Philosophy</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li data-i18n="certifications:curriculum.modules.module3.topics.0">Joints, muscles & fascia</li>
-                                <li data-i18n="certifications:curriculum.modules.module3.topics.1">The nervous system</li>
-                                <li data-i18n="certifications:curriculum.modules.module3.topics.2">The endocrine system</li>
+                                <li data-i18n="certifications:curriculum.modules.module3.topics.0">Yamas and Niyamas</li>
+                                <li data-i18n="certifications:curriculum.modules.module3.topics.1">Chakras and Nadis</li>
+                                <li data-i18n="certifications:curriculum.modules.module3.topics.2">Koshas</li>
+                                <li data-i18n="certifications:curriculum.modules.module3.topics.3">Patanjali's Yoga Sutras</li>
                             </ul>
                         </div>
                     </div>
@@ -314,16 +316,17 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">04</span>
-                            <span class="module-title" data-i18n="certifications:curriculum.modules.module4.title">Aerial Yoga Fundamentals</span>
+                            <span class="module-title" data-i18n="certifications:curriculum.modules.module4.title">Yoga Anatomy</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li data-i18n="certifications:curriculum.modules.module4.topics.0">Basic postures</li>
-                                <li data-i18n="certifications:curriculum.modules.module4.topics.1">Joint grips</li>
-                                <li data-i18n="certifications:curriculum.modules.module4.topics.2">Silk hammock heights</li>
-                                <li data-i18n="certifications:curriculum.modules.module4.topics.3">Adjustments and variations</li>
-                                <li data-i18n="certifications:curriculum.modules.module4.topics.4">Open and close hammock</li>
+                                <li data-i18n="certifications:curriculum.modules.module4.topics.0">Joints</li>
+                                <li data-i18n="certifications:curriculum.modules.module4.topics.1">Major muscles</li>
+                                <li data-i18n="certifications:curriculum.modules.module4.topics.2">Fascia</li>
+                                <li data-i18n="certifications:curriculum.modules.module4.topics.3">The nervous system</li>
+                                <li data-i18n="certifications:curriculum.modules.module4.topics.4">The endocrine system</li>
+                                <li data-i18n="certifications:curriculum.modules.module4.topics.5">Deep muscles: Bandhas and aerial Pilates</li>
                             </ul>
                         </div>
                     </div>
@@ -337,11 +340,12 @@
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li data-i18n="certifications:curriculum.modules.module5.topics.0">Stretches</li>
-                                <li data-i18n="certifications:curriculum.modules.module5.topics.1">Hip opening</li>
-                                <li data-i18n="certifications:curriculum.modules.module5.topics.2">Arches</li>
-                                <li data-i18n="certifications:curriculum.modules.module5.topics.3">Twists</li>
-                                <li data-i18n="certifications:curriculum.modules.module5.topics.4">Inverted postures</li>
+                                <li data-i18n="certifications:curriculum.modules.module5.topics.0">Advanced inversions and progressions</li>
+                                <li data-i18n="certifications:curriculum.modules.module5.topics.1">Introduction to drops (controlled falls)</li>
+                                <li data-i18n="certifications:curriculum.modules.module5.topics.2">Spins</li>
+                                <li data-i18n="certifications:curriculum.modules.module5.topics.3">Advanced wraps (wrapping techniques)</li>
+                                <li data-i18n="certifications:curriculum.modules.module5.topics.4">Progressions from basic to advanced postures</li>
+                                <li data-i18n="certifications:curriculum.modules.module5.topics.5">Stretches, hip opening, backbends, twists</li>
                             </ul>
                         </div>
                     </div>
@@ -350,16 +354,18 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">06</span>
-                            <span class="module-title" data-i18n="certifications:curriculum.modules.module6.title">Sequences & Fluidity</span>
+                            <span class="module-title" data-i18n="certifications:curriculum.modules.module6.title">Sequences & Flow</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li data-i18n="certifications:curriculum.modules.module6.topics.0">Vinyasa yoga in the silk hammock (sun/moon salutations)</li>
-                                <li data-i18n="certifications:curriculum.modules.module6.topics.1">How to design a balanced aerial yoga sequence</li>
-                                <li data-i18n="certifications:curriculum.modules.module6.topics.2">Fluidity of aerial movement</li>
-                                <li data-i18n="certifications:curriculum.modules.module6.topics.3">Variations & dynamics</li>
+                                <li data-i18n="certifications:curriculum.modules.module6.topics.0">Vinyasa: Sun and moon salutations</li>
+                                <li data-i18n="certifications:curriculum.modules.module6.topics.1">How to design a balanced sequence</li>
+                                <li data-i18n="certifications:curriculum.modules.module6.topics.2">Principles of aerial movement fluidity</li>
+                                <li data-i18n="certifications:curriculum.modules.module6.topics.3">Variations and dynamics</li>
                                 <li data-i18n="certifications:curriculum.modules.module6.topics.4">Safe posture transitions</li>
+                                <li data-i18n="certifications:curriculum.modules.module6.topics.5">Aerial Yoga Nidra</li>
+                                <li data-i18n="certifications:curriculum.modules.module6.topics.6">Deep relaxation sequences</li>
                             </ul>
                         </div>
                     </div>
@@ -368,15 +374,15 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">07</span>
-                            <span class="module-title" data-i18n="certifications:curriculum.modules.module7.title">Pranayama, Mantra & Meditation</span>
+                            <span class="module-title" data-i18n="certifications:curriculum.modules.module7.title">Pranayama & Mantra</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li data-i18n="certifications:curriculum.modules.module7.topics.0">The importance of the breath in yoga & meditation</li>
+                                <li data-i18n="certifications:curriculum.modules.module7.topics.0">The importance of breath in yoga and meditation</li>
                                 <li data-i18n="certifications:curriculum.modules.module7.topics.1">Breathwork exercises (pranayama)</li>
                                 <li data-i18n="certifications:curriculum.modules.module7.topics.2">The therapeutic qualities of sound</li>
-                                <li data-i18n="certifications:curriculum.modules.module7.topics.3">Throat opening & mantra practice</li>
+                                <li data-i18n="certifications:curriculum.modules.module7.topics.3">Throat opening and mantra practice</li>
                                 <li data-i18n="certifications:curriculum.modules.module7.topics.4">The art of meditation</li>
                                 <li data-i18n="certifications:curriculum.modules.module7.topics.5">Aerial yoga applications</li>
                             </ul>
@@ -392,10 +398,15 @@
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li data-i18n="certifications:curriculum.modules.module8.topics.0">How to lead a class</li>
-                                <li data-i18n="certifications:curriculum.modules.module8.topics.1">Assistance & adjustments in aerial yoga</li>
-                                <li data-i18n="certifications:curriculum.modules.module8.topics.2">Class preparation with level adjustment</li>
-                                <li data-i18n="certifications:curriculum.modules.module8.topics.3">How to adapt your classes to people with physical limitations</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.0">How to lead a class: Voice use, projection, rhythm, clarity, and body language</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.1">Assistance and adjustments in aerial yoga</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.2">Class creation for different levels and group management</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.3">Adaptations for people with physical limitations</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.4">How to demonstrate while teaching</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.5">Verbal vs. physical communication</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.6">How to create ambiance (music, lighting, temperature)</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.7">Class time management</li>
+                                <li data-i18n="certifications:curriculum.modules.module8.topics.8">Handling new students (medical history, contraindications)</li>
                             </ul>
                         </div>
                     </div>
