--- a/es/certifications/aerial-yoga-100.html
+++ b/es/certifications/aerial-yoga-100.html
@@ -269,10 +269,10 @@
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li>Historia y evolución de la práctica</li>
+                                <li>Historia y evolución del yoga aéreo</li>
                                 <li>Beneficios físicos, mentales y emocionales</li>
                                 <li>Contraindicaciones y precauciones</li>
-                                <li>Cómo atar el columpio</li>
+                                <li>Montaje del columpio (tipo de columpio)</li>
                             </ul>
                         </div>
                     </div>
@@ -281,15 +281,16 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">02</span>
-                            <span class="module-title">Filosofía Yóguica</span>
+                            <span class="module-title">Fundamentos de la Práctica del Yoga Aéreo</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li>El significado espiritual de la práctica</li>
-                                <li>Chakras, nadis y el sistema energético humano</li>
-                                <li>Bandhas, koshas, yamas y niyamas</li>
-                                <li>Yoga sutras de Patanjali</li>
+                                <li>Posturas básicas del yoga aéreo (manual)</li>
+                                <li>Familiarización con el columpio: Agarres con articulaciones, altura de la tela (baja-media-alta), ajustes o variaciones de las posturas, tela abierta y tela cerrada</li>
+                                <li>Uso de la hamaca para descompresión espinal</li>
+                                <li>Aplicaciones terapéuticas específicas en cada postura</li>
+                                <li>Entradas y salidas de la tela</li>
                             </ul>
                         </div>
                     </div>
@@ -298,14 +299,15 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">03</span>
-                            <span class="module-title">Anatomía Yóguica</span>
+                            <span class="module-title">Filosofía del Yoga</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li>Articulaciones, músculos y fascia</li>
-                                <li>El sistema nervioso</li>
-                                <li>El sistema endocrino</li>
+                                <li>Yamas y Niyamas</li>
+                                <li>Chakras y Nadis</li>
+                                <li>Koshas</li>
+                                <li>Yoga Sutras de Patanjali</li>
                             </ul>
                         </div>
                     </div>
@@ -314,16 +316,17 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">04</span>
-                            <span class="module-title">Fundamentos del Yoga Aéreo</span>
+                            <span class="module-title">Anatomía del Yoga</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li>Posturas básicas</li>
-                                <li>Agarres articulares</li>
-                                <li>Alturas del columpio</li>
-                                <li>Ajustes y variaciones</li>
-                                <li>Tela abierta y cerrada</li>
+                                <li>Articulaciones</li>
+                                <li>Músculos principales</li>
+                                <li>Fascia</li>
+                                <li>El sistema nervioso</li>
+                                <li>El sistema endocrino</li>
+                                <li>Músculos profundos: Bandhas y Pilates aéreo</li>
                             </ul>
                         </div>
                     </div>
@@ -337,11 +340,12 @@
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li>Estiramientos</li>
-                                <li>Apertura de caderas</li>
-                                <li>Arcos</li>
-                                <li>Torsiones</li>
-                                <li>Posturas invertidas</li>
+                                <li>Inversiones avanzadas y progresiones</li>
+                                <li>Introducción a drops (caídas controladas)</li>
+                                <li>Spins (giros)</li>
+                                <li>Wraps avanzados (técnicas de envolver)</li>
+                                <li>Progresiones de posturas básicas a avanzadas</li>
+                                <li>Estiramientos, apertura de cadera, arcos, torsiones</li>
                             </ul>
                         </div>
                     </div>
@@ -350,16 +354,18 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">06</span>
-                            <span class="module-title">Secuencias y Fluidez</span>
+                            <span class="module-title">Secuencias y Fluidez en la Práctica</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li>Vinyasa yoga en el columpio (saludos al sol/luna)</li>
-                                <li>Cómo diseñar una secuencia equilibrada de yoga aéreo</li>
-                                <li>Fluidez del movimiento aéreo</li>
+                                <li>Vinyasa: Saludos al sol y a la luna</li>
+                                <li>Cómo diseñar una secuencia equilibrada</li>
+                                <li>Principios de fluidez del movimiento aéreo</li>
                                 <li>Variaciones y dinámicas</li>
                                 <li>Transiciones seguras entre posturas</li>
+                                <li>Yoga Nidra aéreo</li>
+                                <li>Secuencias de relajación profunda</li>
                             </ul>
                         </div>
                     </div>
@@ -368,7 +374,7 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">07</span>
-                            <span class="module-title">Pranayama, Mantra y Meditación</span>
+                            <span class="module-title">Pranayama y Mantra</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
@@ -387,15 +393,20 @@
                     <div class="accordion-item">
                         <button class="accordion-header" aria-expanded="false">
                             <span class="module-number">08</span>
-                            <span class="module-title">Metodología de Enseñanza</span>
+                            <span class="module-title">Metodología y Enseñanza</span>
                             <i data-lucide="chevron-down" class="accordion-icon"></i>
                         </button>
                         <div class="accordion-content">
                             <ul class="module-topics">
-                                <li>Cómo guiar una clase</li>
+                                <li>Cómo guiar una clase: Uso de la voz, proyección, ritmo, claridad y lenguaje corporal</li>
                                 <li>Asistencia y ajustes en yoga aéreo</li>
-                                <li>Preparación de clases con ajuste de nivel</li>
-                                <li>Cómo adaptar tus clases a personas con limitaciones físicas</li>
+                                <li>Creación de clase para distintos niveles y manejo de grupo</li>
+                                <li>Adaptación para personas con limitaciones físicas</li>
+                                <li>Cómo demostrar mientras enseñas</li>
+                                <li>Comunicación verbal vs. física</li>
+                                <li>Cómo crear ambiente (música, iluminación, temperatura)</li>
+                                <li>Gestión del tiempo de clase</li>
+                                <li>Manejo con nuevos alumnos (historial médico, contraindicaciones)</li>
                             </ul>
                         </div>
                     </div>
